# kagenti-extensions

./: CLAUDE.md  LOCAL_TESTING_GUIDE.md  README.md  local-build-and-test.sh
.github/codeql/: codeql-config.yml
.github/workflows/: build.yaml  pr-verifier.yml  scorecard.yaml  security-scans.yaml
authbridge/: CLAUDE.md  README.md  go.work
authbridge/authlib/: README.md  go.mod
authbridge/authlib/auth/: auth.go  auth_test.go  result.go
authbridge/authlib/config/: config.go  config_test.go  presets.go  resolve.go  validate.go  warn.go  warn_test.go
authbridge/authlib/contracts/: content.go
authbridge/authlib/llmclient/: client.go  structured.go
authbridge/authlib/observe/: statserver.go  statserver_test.go
authbridge/authlib/pipeline/: README.md  bodymutation_test.go  configurable.go  configured.go  configured_test.go  content.go  content_test.go  context.go  extensions.go  extensions_test.go  finisher_test.go  holder.go  outcome.go  (+10 more)
authbridge/authproxy/: Makefile  authbridge-combined.yaml
authbridge/demos/: README.md
authbridge/docs/: framework-architecture.md  ibac-plugin.md  plugin-reference.md  plugin-tutorial.md  sparc-plugin.md
authbridge/sparc-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
authbridge/sparc-service/deploy/: Makefile  README.md  sparc-service.yaml
authbridge/sparc-service/sparc_service/: __init__.py  __main__.py  api.py  engine.py  models.py  providers.py  settings.py
authbridge/sparc-service/tests/: conftest.py  test_api.py  test_engine.py  test_providers.py  test_settings.py  test_watsonx_integration.py
(+223 files in other folders)
